--- a/themes/dripdeals/css/style.css
+++ b/themes/dripdeals/css/style.css
@@ -1590,7 +1590,29 @@ color: #fff;
 font-size: 15px;
 font-weight: 500;
 }
+.location_icon_bottum ul li a{
+     color: #fff;
+}
+
 .location_icon_bottum ul li img {padding-right: 10px;}
+
+.location_icon_bottum ul li .cart{
+     position: relative;
+}
+.cart-count{
+     position: absolute;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     top: 0;
+     right:1;
+     width: 20px;
+     height: 20px;
+     padding: 2px;
+     border-radius: 50%;
+     background: #fff;
+     color: red;
+}
 
 /** banner **/
 
@@ -1856,7 +1878,7 @@ border-radius: 50px;
      text-align: center;
      padding: 80px 0px 30px 0px ;
 }
-.brand-bg .brand_box > img {
+.brand-bg .brand_box > a img {
     height: 200px;
     width: auto;
 }
@@ -1870,8 +1892,10 @@ border-radius: 50px;
 .red {
      color: #ff0000;
 }
-
-.brand-bg .brand_box span {
+.ptitle{
+     display: block;
+}
+.brand-bg .brand_box a {
      display: block;
      color: #19449b;
      font-size: 16px;
@@ -1900,6 +1924,7 @@ margin-top: 40px
 
 .read-more:hover {
      background: #ff0000;
+     cursor: pointer;
 }
 
 /** end brand **/
@@ -2157,3 +2182,7 @@ ul.location_icon span {
 .special-page .relative  {text-align:center !important; }
 
 .special-page .footer {margin-top: 90px;}
+
+main{
+    margin-top: 100px;
+}
